# Academic_ComputerVision

./: .gitignore  README.md
code/: 0_FirstSteps.cpp  10_Canny.cpp  11_Morphology.cpp  12_Watershed.cpp  13_Geometry.cpp  14_.cpp  14_Object_Extraction.cpp  1_Binarization.cpp  2_Light_Rectangles.cpp  3_RGB.cpp  4_Geometric_Transformations.cpp  5_Perspective_Transformation.cpp  6_Filters.cpp  7_Histogram.cpp  7_Histograms.cpp  8_Brightness_Contrast.cpp  9_Contours.cpp  CMakeLists.txt  _CMakeLists.txt  compile.sh  compile_all.sh  filedata.txt
code/filedata/: 0_filedata.txt  10_filedata.txt  11_filedata.txt  12_filedata.txt  13_filedata.txt  1_filedata.txt  2_filedata.txt  3_filedata.txt  4_filedata.txt  5_filedata.txt  6_filedata.txt  7_filedata.txt  8_filedata.txt  9_filedata.txt
code/header/: basic_operations.hpp  cv_basic_operations.hpp  cv_headers.hpp  cv_library.hpp  headers.hpp
code/header_files/: basic_operations.hpp
code/src/: basic_operations.cpp  cv_basic_operations.cpp  cv_library.cpp
